--- a/index.html
+++ b/index.html
@@ -223,12 +223,12 @@
     <!--bigBanner start-->
     <div class="bigBanner">
    		<div id="bigBanner" class="clearFix">
-            <a class="a1" href=""><img src="images/_temp/bigBanner.png" alt=""></a>
-            <a class="a1" href=""><img src="images/_temp/bigBanner.png" alt=""></a>
-            <a class="a1" href=""><img src="images/_temp/bigBanner.png" alt=""></a>
-            <a class="a1" href=""><img src="images/_temp/bigBanner.png" alt=""></a>
-            <a class="a1" href=""><img src="images/_temp/bigBanner.png" alt=""></a>
-            <a class="a1" href=""><img src="images/_temp/bigBanner.png" alt=""></a>
+            <a class="a1" href=""><img src="images/temp/bigBanner.png" alt=""></a>
+            <a class="a1" href=""><img src="images/temp/bigBanner.png" alt=""></a>
+            <a class="a1" href=""><img src="images/temp/bigBanner.png" alt=""></a>
+            <a class="a1" href=""><img src="images/temp/bigBanner.png" alt=""></a>
+            <a class="a1" href=""><img src="images/temp/bigBanner.png" alt=""></a>
+            <a class="a1" href=""><img src="images/temp/bigBanner.png" alt=""></a>
         </div>
         <div id="fra">
         	<span class="ccc">1</span>
@@ -347,7 +347,7 @@
         <!--mid-->
             <div class="mainRight left mr1">
                 <div class="banner">
-                    <a href=""><img src="images/_temp/banner1.png" width="700" height="290" /></a>
+                    <a href=""><img src="images/temp/banner1.png" width="700" height="290" /></a>
                 </div>
                 <div class="subnav">
                     <ul>
@@ -361,7 +361,7 @@
                     </ul>
                 </div>
                 <div class="subnavBt clearFix mt" style="width:700px;">
-                    <a class="left mr" href=""><img src="images/_temp/subnavbt1.png" alt="" width="316" height="196" /></a>
+                    <a class="left mr" href=""><img src="images/temp/subnavbt1.png" alt="" width="316" height="196" /></a>
                     <ul class="left clearFix">
                         <li class="clearFix"><a class="left" href="">周末大放送，秦皇岛三日游，秦皇岛三</a><span class="orange right">￥465元</span></li>	
                         <li class="clearFix"><a class="left" href="">周末大放送，秦皇岛三日游</a><span class="orange right">￥465元</span></li>
@@ -377,8 +377,8 @@
         <!--right-->
         
             <ul class="mainright1 left">
-                <li class="mb"><a href=""><img src="images/_temp/rt1.png" alt="" width="274" height="290"></a></li>
-                <li><a href=""><img src="images/_temp/rt2.png" alt="" width="274" height="241"></a></li>
+                <li class="mb"><a href=""><img src="images/temp/rt1.png" alt="" width="274" height="290"></a></li>
+                <li><a href=""><img src="images/temp/rt2.png" alt="" width="274" height="241"></a></li>
             </ul>
           
         </div>
